# EngineEngine

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: main.yaml
src/: CMakeLists.txt
src/App/Example/: CMakeLists.txt
src/App/Example/include/Example/: CheckeredFloor.hpp  Module.hpp  data.hpp
src/App/Example/src/Example/: Module.cpp
src/Engine/: CMakeLists.txt
src/Engine/api/: CMakeLists.txt
src/Engine/api/detail/: Version.hpp.in
src/Engine/api/include/Engine/: Event.hpp  Module.hpp  api.hpp  third_party.hpp
src/Engine/api/include/Engine/component/: all.hpp
src/Engine/api/src/Engine/: api.cpp
src/Engine/core/: CMakeLists.txt
src/Engine/core/include/Engine/: Camera.hpp  Core.hpp  EventManager.hpp  core.hpp
src/Engine/core/include/Engine/dll/: Handle.hpp  Handler.hpp  Loader.hpp
src/Engine/core/include/Engine/graphics/: Shader.hpp  Window.hpp  third_party.hpp
src/Engine/core/include/Engine/helpers/: overloaded.hpp
src/Engine/core/include/Engine/json/: Event.hpp
src/Engine/core/include/Engine/widget/: CameraWidget.hpp  ComponentTree.hpp  DisplayOption.hpp
src/Engine/core/src/Engine/: Core.cpp  EventManager.cpp  core.cpp
src/Engine/core/src/Engine/dll/: Handle.cpp  Handler.cpp
src/Engine/core/src/Engine/graphics/: Shader.cpp  Window.cpp
src/Engine/core/src/Engine/widget/: ComponentTree.cpp
src/Engine/glfw_imgui_impl/: CMakeLists.txt
src/Engine/main/: CMakeLists.txt
src/Engine/main/src/: main.cpp
tools/: install.sh  launch.sh
